--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,7 +13,7 @@
       <input type="text" placeholder="search here . . " />
       <button>
         <svg class="header-search-icon">
-          <use xlink:href="image/sprite.svg#icon-search"></use>
+          <use xlink:href="/image/sprite.svg#icon-search"></use>
         </svg>
       </button>
     </form>
