--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -1,4 +1,4 @@
-<div class="post-comment">
+<div id="comment-<%=comment.id%>" class="post-comment">
   <a href="#">
     <img class="post-comment-user" src="<%=comment.user.avatar%>" />
   </a>
