--- a/views/new-post.ejs
+++ b/views/new-post.ejs
@@ -2,6 +2,7 @@
   <form
     action="/posts/create"
     enctype="multipart/form-data"
+    id="new-post-form"
     class="new-post-container"
     method="POST"
   >
