--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,6 +28,9 @@
   <body>
     <%- include('header')%> <%- include('new-post')%> <%- body%> <%-
     include('footer')%>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
       integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
@@ -66,13 +69,12 @@
       <% } %>
     </script>
     <script src="/js/toggle-likes.js"></script>
+    <script src="/js/home_post-comments.js"></script>
+    <script src="/js/home_posts.js"></script>
+
     <script src="/js/toggle-follow.js"></script>
     <script src="/js/post-view.js"></script>
     <script>
-      $(" .toggle-like-button").each(function () {
-        let self = this;
-        let toggleLike = new ToggleLike(self);
-      });
       $(" .post-comment-like").each(function () {
         let self = this;
         let toggleLike = new ToggleLike(self);
@@ -87,6 +89,5 @@
       });
     </script>
     <script src="/js/new-post.js"></script>
-    <script src="/js/home_posts.js"></script>
   </body>
 </html>
