--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -83,10 +83,13 @@
         let self = this;
         let toggleFollow = new ToggleFollow(self);
       });
-      $(" .profile-image-block").each(function () {
-        let self = this;
-        let viewPost = new ViewPost(self);
-      });
+
+      // $(" .profile-image-block").click(function () {
+      //   let self = this;
+      //   let x = self.href.split("/");
+
+      //   let viewPost = new PostComments(x[x.length - 1]);
+      // });
     </script>
     <script src="/js/new-post.js"></script>
   </body>
