--- a/views/user-sign-in.ejs
+++ b/views/user-sign-in.ejs
@@ -31,7 +31,7 @@
               <use xlink:href="/image/sprite.svg#icon-google"></use>
             </svg>
           </a>
-          <a href="#" class="icon">
+          <a href="/users/auth/github" class="icon">
             <svg>
               <use xlink:href="/image/sprite.svg#icon-github"></use>
             </svg>
