--- a/views/post.ejs
+++ b/views/post.ejs
@@ -73,6 +73,7 @@
     >
       <input
         type="text"
+        class="input-comment"
         name="content"
         placeholder="Add comments . . ."
         required
