--- a/views/user-sign-up.ejs
+++ b/views/user-sign-up.ejs
@@ -32,7 +32,7 @@
             </svg>
           </a>
         </div>
-        <p class="small">or use your email account:</p>
+
         <form
           action="/users/create"
           class="sign-up-form"
@@ -64,7 +64,7 @@
             type="password"
             class="input"
             placeholder="Confirm password"
-            name="confirm_password"
+            name="passwordConfirm"
           />
           <button class="control-button" type="submit">Sign Up</button>
         </form>
