--- a/assets/css/password-reset.css
+++ b/assets/css/password-reset.css
@@ -24,8 +24,8 @@ html {
 }
 
 :root {
-  --base-color-dark: rgb(209, 41, 41);
-  --base-color-light: rgb(231, 85, 85);
+  --base-color-dark: rgb(46, 112, 54);
+  --base-color-light: rgb(55, 132, 75);
 }
 .content {
   background-color: #f3eded;
@@ -34,18 +34,12 @@ html {
 }
 .container {
   width: 70vw;
-
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1.5fr;
   overflow: hidden;
-  box-shadow: 2px 10px 40px var(--base-color-dark);
+  box-shadow: 2px 10px 40px rgba(22, 20, 19, 0.4);
   border-radius: 10px;
-}
-.hide {
-  opacity: 0;
-  visibility: hidden;
-  display: none;
 }
 @media only screen and (max-width: 75em) {
   .container {
@@ -103,8 +97,7 @@ html {
   fill: white;
 }
 
-.sign-in,
-.reset {
+.sign-in {
   display: grid;
   grid-template-rows: repeat(3, min-content);
   grid-gap: 2rem;
@@ -112,14 +105,12 @@ html {
   text-align: center;
   padding: 3rem;
 }
-.sign-in-form,
-.reset-form {
+.sign-in-form {
   display: grid;
   justify-self: center;
   justify-items: center;
 }
-.sign-in-form .input,
-.reset-form .input {
+.sign-in-form .input {
   margin: 12px;
   font-size: 14px;
   padding: 15px;
@@ -134,8 +125,7 @@ html {
   border-bottom: 2px solid transparent;
   color: var(--base-color-dark);
 }
-.sign-in-form .input:focus,
-.reset-form .input:focus {
+.sign-in-form .input:focus {
   outline: none;
   border-bottom: 2px solid var(--base-color-dark);
 }
@@ -156,7 +146,7 @@ html {
 }
 
 .form {
-  grid-template-rows: repeat(7, min-content);
+  grid-template-rows: repeat(7, 1fr);
   padding: 2rem;
 }
 .form-heading {
