--- a/views/post.ejs
+++ b/views/post.ejs
@@ -73,7 +73,7 @@
     >
       <input
         type="text"
-        class="input-comment"
+        class="mytextarea input-comment"
         name="content"
         placeholder="Add comments . . ."
         required
