--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -85,5 +85,17 @@
       // });
     </script>
     <script src="/js/new-post.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.10.1/qs.min.js"
+      integrity="sha512-aTKlYRb1QfU1jlF3k+aS4AqTpnTXci4R79mkdie/bp6Xm51O5O3ESAYhvg6zoicj/PD6VYY0XrYwsWLcvGiKZQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js"></script>
+    <script src="/js/chat_engine.js"></script>
+    <script>
+        <% if(locals.user){%> new ChatEngine("chat-window",'<%=locals.user.username%>')
+      <%}%>
+    </script>
   </body>
 </html>
