--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -1,6 +1,6 @@
 .chat-box {
   position: fixed;
-  right: 10rem;
+  right: 50rem;
   top: 35rem;
   grid-column: 8/-1;
   height: 35rem;
@@ -26,6 +26,10 @@
 .chat-box-users {
   overflow-y: auto;
   padding: 1rem;
+}
+.chat-box-users a {
+  text-decoration: none;
+  color: black;
 }
 .chat-box-usercard {
   padding: 1rem 1.5rem;
@@ -89,15 +93,7 @@
   padding: 1rem;
   list-style: none;
 }
-.chat-room .message {
-  padding: 0.5rem;
-  width: max-content;
-  color: black;
-  margin-bottom: 0.2rem;
-  font-size: 1.6rem;
-  border-radius: 10px;
-  max-width: 20rem;
-}
+
 .chat-room .message-name {
   display: block;
   font-weight: 600;
@@ -111,12 +107,27 @@
   margin-left: auto;
   background-color: pink;
 }
+.chat-room .system {
+  margin: 0 auto;
+  background-color: white;
+  border: 1px solid black;
+  text-align: center;
+}
 .chat-room .receiver {
   margin-right: auto;
   align-items: flex-start;
   background-color: #eee6e6;
 }
-
+.chat-room .message {
+  padding: 0.5rem;
+  width: max-content;
+  color: black;
+  margin-bottom: 0.2rem;
+  font-size: 1.6rem;
+  border-radius: 10px;
+  max-width: 20rem;
+  margin-bottom: 0.5rem;
+}
 .chat-time {
   font-size: 0.8rem;
   padding: 0.5rem;
