--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,23 +28,23 @@
       <div class="suggested-users">
         <h3>suggestions for you</h3>
         <div class="suggested-cards">
-          <%for(user of all_users){%>
-          <div class="user-card" id="user-card-<%=user.id%>">
-            <a href="/users/profile/<%=user.id%>">
-              <img src="<%=user.avatar%>" alt="" class="user-card-image" />
+          <%for(auser of all_users){%>
+          <div class="user-card" id="user-card-<%=auser.id%>">
+            <a href="/users/profile/<%=auser.id%>">
+              <img src="<%=auser.avatar%>" alt="" class="user-card-image" />
             </a>
             <div class="user-card-details">
-              <a href="/users/profile/<%=user.id%>" class="user-card-username"
-                ><%=user.username%></a
+              <a href="/users/profile/<%=auser.id%>" class="user-card-username"
+                ><%=auser.username%></a
               >
-              <p class="user-card-name"><%=user.name%></p>
+              <p class="user-card-name"><%=auser.name%></p>
             </div>
             <a
-              data-followers="<%=user.followers.length%>"
-              href="/users/follow/<%=user.id%>"
+              data-followers="<%=auser.followers.length%>"
+              href="/users/follow/<%=auser.id%>"
               class="user-card-follow toggle-follow-button"
             >
-              <%if(user.followers.includes(locals.user.id)){%>unfollow<%}else{%>follow<%}%></a
+              <%if(auser.followers.includes(locals.user.id)){%>unfollow<%}else{%>follow<%}%></a
             >
           </div>
           <%}%>
@@ -52,5 +52,5 @@
       </div>
     </div>
   </div>
-  <%}%>
+  <%- include('chat')%> <%}%>
 </div>
