--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -25,9 +25,9 @@
       </div>
     </a> -->
 
-<div class="chat-window" id="chat-window">
+<div class="chat-window min" id="chat-window">
   <div class="chat-header">
-    <svg class="chat-header-icon btn-leave">
+    <!-- <svg class="chat-header-icon btn-leave">
       <use xlink:href="image/sprite.svg#icon-chevron-with-circle-left"></use>
     </svg>
     <div class="chat-user">
@@ -37,7 +37,8 @@
       </div>
 
       <div class="chat-user-username">hanna.khandwal</div>
-    </div>
+    </div> -->
+    CHATCORD
     <div class="chat-header-icons">
       <svg class="chat-header-icon btn-minimize hide">
         <use xlink:href="image/sprite.svg#icon-chevron-with-circle-down"></use>
@@ -97,7 +98,12 @@
     </div> -->
   </div>
   <form action="" class="chat-form">
-    <input type="text" id="chat_input" placeholder="type here" />
+    <input
+      type="text"
+      id="chat_input"
+      class="mytextarea"
+      placeholder="type here"
+    />
     <button type="submit">send</button>
   </form>
 </div>
