--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -73,6 +73,7 @@
   display: flex;
   align-items: center;
   padding: 0.5rem 1rem;
+  height: 4rem;
 }
 .chat-header-icons {
   position: relative;
